--- a/assets/style/base/base.css
+++ b/assets/style/base/base.css
@@ -39,8 +39,7 @@ object {
 }
 
 /* tap targets: */
-nav a,
-button {
+nav a {
   min-width: 48px;
   min-height: 48px;
 }
@@ -54,5 +53,10 @@ li{
   list-style: none;
 }
 ul{
+  padding: 0;
+}
+button{
+  border: 0;
+  background-color: inherit;
   padding: 0;
 }
