--- a/assets/style/apps/mail/EmailList.css
+++ b/assets/style/apps/mail/EmailList.css
@@ -28,8 +28,16 @@
     padding-inline: 16px;
 
 }
+.email-list article:hover{
+    cursor: pointer;
+    box-shadow: inset 1px 0 0px #dadce0, inset -1px 0 0 #dadce0, 1px 3px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
+}
+.email-list article .preview-txt{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .email-list article div{
     display: flex;
     gap: 10px;
-    align-items: flex-end;
 }
