--- a/assets/style/apps/note/NoteIndex.css
+++ b/assets/style/apps/note/NoteIndex.css
@@ -12,3 +12,5 @@
 @import "cmps/NotePreview.css";
 @import "cmps/NoteList.css";
 @import "cmps/NoteAdd.css";
+@import "cmps/NoteDetails.css";
+@import "cmps/screen.css";
