--- a/assets/style/apps/note/base/layout.css
+++ b/assets/style/apps/note/base/layout.css
@@ -1,9 +1,11 @@
 .note-app {
-  display: grid;
-  grid-template-columns: 20px 1fr 20px;
-  width: 100vw;
+  /* display: grid; */
+  /* grid-template-columns: 20px 1fr 20px; */
 }
 .note-main {
-  grid-column: 2;
-  padding: 2em;
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  grid-template-rows: 252px 1fr;
+  width: 100%;
 }
