--- a/assets/style/apps/note/cmps/NoteList.css
+++ b/assets/style/apps/note/cmps/NoteList.css
@@ -1,41 +1,20 @@
 .notes-list {
-  column-count: 3;
-  width: 100%;
+  grid-row: 2;
+  columns: 272px;
+  width: 100vw;
+  margin-block-start: 2em;
+  margin-inline-start: 3em;
+  /* margin-inline-end: 3em; */
   /* column-gap: 1rem; */
   /* column-width: 300px; */
 }
-​ .note-list:not(:first-of-type) {
-  margin: 1rem 0;
-  column-fill: balance;
-  break-inside: avoid-column;
-  height: fit-content;
-  background-color: lightblue;
-  border: 1px solid black;
-}
 
+.notes-list :first-child {
+  margin-block-start: 0px;
+}
 ​ .app-filter:focus-within :is(.some-content, .some-title) {
   display: block;
 }
 ​ .custom-file-input:hover::before {
   border-color: black;
-}
-​ .some-content,
-.some-title {
-  display: none;
-}
-​ [data-title] {
-  position: relative;
-}
-​ [data-title]:hover::after {
-  content: attr(data-title);
-  position: absolute;
-  font-size: 12px;
-  background: #333;
-  color: #fff;
-  padding: 0.2em 0.3em;
-  border-radius: 0.2em;
-  text-transform: capitalize;
-  bottom: -25px;
-  width: max-content;
-  left: 12px;
 }
