--- a/assets/style/apps/note/cmps/NotePreview.css
+++ b/assets/style/apps/note/cmps/NotePreview.css
@@ -9,7 +9,7 @@
   font-size: 1.125rem;
   border-radius: 8px;
   font-weight: 400;
-  margin-block-end: 2em;
+  margin-block-start: 2em;
   min-height: 30px;
 }
 .text-box {
