--- a/assets/style/base/layout.css
+++ b/assets/style/base/layout.css
@@ -1,7 +1,14 @@
-.main-layout {
-  margin: 0 auto;
-  padding-left: 1.6rem;
-  padding-right: 1.6rem;
+.note-main {
+  /* height: 100%; */
+  display: grid;
+  grid-template-rows: 125px 1fr;
+  justify-content: center;
+  justify-items: center;
+  width: 100%;
 }
-
-
+.main-layout {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: 70px 1fr 35px;
+  width: 100vw;
+}
