--- a/assets/style/apps/mail/EmailIndex.css
+++ b/assets/style/apps/mail/EmailIndex.css
@@ -20,3 +20,6 @@
     margin-block-end: 25px;
 
 }
+.compose-btn:hover{
+    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
+}
