--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -19,5 +19,8 @@
 @import 'apps/mail/EmailList.css';
 @import 'apps/mail/cmps/EmailPreview.css';
 @import 'apps/mail/cmps/SideNav.css';
+@import 'apps/mail/cmps/EmailCompose.css';
+@import 'apps/mail/cmps/EmailDetails.css';
+
     /* KEEP */
 @import 'apps/note/NoteIndex.css';
