--- a/assets/style/apps/note/base/layout.css
+++ b/assets/style/apps/note/base/layout.css
@@ -1,11 +1,7 @@
-.note-app {
-  /* display: grid; */
-  /* grid-template-columns: 20px 1fr 20px; */
-}
 .note-main {
   display: grid;
 
   justify-items: center;
-  grid-template-rows: 252px 1fr;
+  grid-template-rows: 64px 170px 1fr;
   width: 100%;
 }
