--- a/assets/style/apps/note/cmps/NoteDetails.css
+++ b/assets/style/apps/note/cmps/NoteDetails.css
@@ -9,7 +9,7 @@
   padding: 10px 15px;
   width: 600px;
   display: grid;
-  grid-template-rows: 44px minmax(46px, 1fr) 33px;
+  grid-template-rows: 1fr 33px;
   box-shadow: 0 1px 3px 0 rgb(60 64 67 / 30%), 0 4px 8px 3px rgb(60 64 67 / 15%);
 }
 .note-title {
@@ -21,6 +21,7 @@
   overflow: hidden;
 }
 .note-text {
+  font-size: 14px;
   grid-row: 2;
   padding: 4px 16px 12px 16px;
   overflow: hidden;
@@ -39,4 +40,7 @@
   gap: 1em;
   justify-content: center;
   align-items: center;
+}
+.note-details:focus-visible {
+  outline: none;
 }
