--- a/assets/style/apps/note/cmps/NotePreview.css
+++ b/assets/style/apps/note/cmps/NotePreview.css
@@ -4,13 +4,23 @@
     inset 2px 2px 0 rgb(0 0 0 / 7%);
   break-inside: avoid-column;
   display: grid;
+  position: relative;
   padding-top: 12px;
   grid-template-rows: 1fr 33.11px;
   font-size: 1.125rem;
   border-radius: 8px;
   font-weight: 400;
-  margin-block-start: 2em;
+  margin-inline-end: 16px;
   min-height: 30px;
+}
+.note {
+  margin-block-start: 0px;
+}
+.full-pin-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px;
 }
 .text-box {
   grid-row: 1;
@@ -29,13 +39,19 @@
   overflow: hidden;
 }
 .text-box .note-text {
+  font-size: 14px;
   grid-row: 2;
   padding: 4px 16px 12px 16px;
   overflow: hidden;
 }
 .note .tool-bar {
-  margin: 4px 0px;
+  margin: 8px;
   grid-row: 2;
   display: flex;
   gap: 0.25em;
+}
+
+.note .tool-bar > *:hover {
+  border-radius: 50%;
+  background-color: lightgray;
 }
