--- a/assets/style/apps/note/cmps/NoteAdd.css
+++ b/assets/style/apps/note/cmps/NoteAdd.css
@@ -4,7 +4,7 @@
   width: 599px;
   height: 136px;
   display: grid;
-  grid-template-rows: 44px 1fr 36px;
+  grid-template-rows: 1fr 36px;
   border-radius: 8px;
   box-shadow: 1px 1px 0 rgb(0 0 0 / 10%), -1px -1px 11px 0px rgb(0 0 0 / 7%),
     inset 1px 1px 0 rgb(0 0 0 / 10%), inset 0 -1px 0 rgb(0 0 0 / 7%);
@@ -27,7 +27,7 @@
 }
 .note-add .tool-bar {
   margin: 0 8px;
-  grid-row: 3;
+  grid-row: 2;
   height: 33px;
   display: flex;
   justify-content: space-between;
