--- a/assets/style/apps/note/cmps/NoteDetails.css
+++ b/assets/style/apps/note/cmps/NoteDetails.css
@@ -12,21 +12,36 @@
   grid-template-rows: 1fr 33px;
   box-shadow: 0 1px 3px 0 rgb(60 64 67 / 30%), 0 4px 8px 3px rgb(60 64 67 / 15%);
 }
+.note-info {
+  display: grid;
+  padding: 12px 16px 0px 16px;
+}
 .note-title {
+  width: 100%;
   grid-row: 1;
   font-family: "roboto regular";
   font-size: 1rem;
-  padding: 12px 16px 0px 16px;
   font-weight: 500;
   overflow: hidden;
 }
 .note-text {
+  margin-block-start: 16px;
+  width: 100%;
   font-size: 14px;
   grid-row: 2;
+  overflow: hidden;
+}
+.text-info {
+  width: 100%;
+  font-size: 14px;
   padding: 4px 16px 12px 16px;
   overflow: hidden;
 }
-.note-modal > *:focus-visible {
+
+.note-title:focus-visible {
+  outline: none;
+}
+.note-text:focus-visible {
   outline: none;
 }
 .note-modal .tool-bar {
