--- a/assets/style/apps/note/cmps/colorPicker.css
+++ b/assets/style/apps/note/cmps/colorPicker.css
@@ -5,8 +5,17 @@
   cursor: pointer;
 }
 .color-picker {
+  padding: 2px;
+  border-radius: 8px;
+  height: fit-content;
   display: flex;
   gap: 0.25em;
+}
+.color-picker > * {
+  border: solid 0.1px black;
+}
+.color.white {
+  background-color: #ffffff;
 }
 .color.red {
   background-color: #f28b82;
