--- a/assets/style/apps/note/NoteIndex.css
+++ b/assets/style/apps/note/NoteIndex.css
@@ -15,7 +15,7 @@
 @import "cmps/NoteImg.css";
 @import "cmps/todos.css";
 @import "cmps/NoteDetails.css";
-@import "cmps/NoteFilter.css";
 @import "cmps/screen.css";
 @import "cmps/colorPicker.css";
 @import "cmps/AppHeader.css";
+@import "cmps/SideNav.css";
