--- a/assets/style/apps/note/cmps/AppHeader.css
+++ b/assets/style/apps/note/cmps/AppHeader.css
@@ -6,7 +6,7 @@
   align-items: center;
   box-shadow: 0px 3px 0 rgb(0 0 0 / 10%), inset 0 -1px 0 rgb(0 0 0 / 7%);
   grid-auto-flow: column;
-  grid-template-columns: 40px 44px 100px 1fr 40px;
+  grid-template-columns: 40px 44px 100px 1fr 200px;
 }
 
 .main-header img {
@@ -24,16 +24,44 @@
 }
 .main-header .note-filter {
   grid-column: 4;
+  align-self: center;
+  height: 46px;
 }
 .main-header .filter-txt-container {
+}
+.main-header .filter-txt-container input {
+  background-color: transparent;
+  width: 100%;
+}
+.note-filter {
+  grid-row: 1;
+  height: 100%;
+  align-self: center;
   border-radius: 8px;
   background-color: #f0f3f4;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  margin-inline-end: 16px;
+  display: grid;
+  grid-template-columns: 30px 1fr;
+  align-items: center;
+  justify-content: flex-start;
+  height: 48px;
+  padding: 8px;
+  max-width: 720px;
 }
-.main-header .filter-txt-container input {
+.note-filter .filter-txt {
+  grid-column: 2;
   background-color: transparent;
-  width: 100%;
+}
+.note-filter > * {
+  border: none;
+}
+.note-filter .filter-txt-container .filter-txt {
+  border: none;
+}
+.note-filter .filter-txt:focus-visible {
+  width: inherit;
+  justify-self: flex-start;
+  outline: none;
 }
