--- a/assets/style/apps/note/cmps/NoteDetails.css
+++ b/assets/style/apps/note/cmps/NoteDetails.css
@@ -13,7 +13,9 @@
   box-shadow: 0 1px 3px 0 rgb(60 64 67 / 30%), 0 4px 8px 3px rgb(60 64 67 / 15%);
 }
 .note-info {
+  position: relative;
   display: grid;
+  align-items: flex-start;
   padding: 12px 16px 0px 16px;
 }
 .note-title {
@@ -32,6 +34,7 @@
   overflow: hidden;
 }
 .text-info {
+  align-items: flex-start;
   width: 100%;
   font-size: 14px;
   padding: 4px 16px 12px 16px;
