--- a/assets/style/apps/note/cmps/SideNav.css
+++ b/assets/style/apps/note/cmps/SideNav.css
@@ -1,9 +1,8 @@
-.side-nav {
-  background-color: #f6f8fc;
-}
-
-.side-nav-item {
-  display: flex;
+.notes-display .side-nav-item {
+  display: grid;
+  grid-template-columns: 20px 20px 240px;
+  align-items: center;
+  height: 48px;
   gap: 18px;
   padding-inline-start: 26px;
   padding-inline-end: 12px;
@@ -11,23 +10,27 @@
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
   cursor: pointer;
-  background-color: #f6f8fc;
+  background-color: white;
+  /* font-family: "roboto-medium"; */
 }
-
+.notes-display .side-nav {
+  width: 100%;
+  font-size: 15px;
+}
 .unread-count {
   -webkit-font-smoothing: auto;
-  font-family: "roboto-medium";
   font-size: 0.75rem;
   color: #5f6368;
   opacity: 0.8;
 }
 
 .side-nav-item .icon {
+  grid-column: 2;
   fill: #5f6368;
 }
 
-.side-nav-item:hover {
-  background-color: #e7e7e7;
+.notes-display .side-nav-item:hover {
+  background-color: #f1f3f4;
 }
 
 .side-nav-item.inbox div {
@@ -35,8 +38,8 @@
   gap: 98px;
   align-items: center;
 }
-.clicked-side-nav {
-  background-color: #d3e3fd;
+.notes-display .clicked-side-nav {
+  background-color: #fdefc3;
   font-family: "roboto-medium";
   color: #041e49;
   fill: #041e49;
