--- a/assets/style/apps/note/cmps/colorPicker.css
+++ b/assets/style/apps/note/cmps/colorPicker.css
@@ -5,7 +5,15 @@
   cursor: pointer;
 }
 .color-picker {
-  padding: 2px;
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+  height: 50px;
+  background-color: white;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  transform: translate(0%, 70%);
+  z-index: 1;
+  padding: 8px;
   border-radius: 8px;
   height: fit-content;
   display: flex;
