--- a/assets/style/apps/note/cmps/todos.css
+++ b/assets/style/apps/note/cmps/todos.css
@@ -1,13 +1,15 @@
 .todos .todo {
   margin-inline-start: 0.5em;
   display: grid;
-  gap: 0.25em;
-  grid-template-columns: 18px 1fr;
+  gap: 16px;
+  grid-template-columns: 18px 1fr 18px;
+  align-items: center;
 }
 .todo .check-todo {
-  margin-inline-end: 0.5em;
+  margin-inline-end: 16px;
   height: 18px;
   width: 18px;
-  box-shadow: inset 1px 1px 0 rgb(0 0 0 / 10%), inset 0 -1px 0 rgb(0 0 0 / 7%);
-  border-width: 0 4px 0 0;
+}
+.add-todo {
+  margin-inline-start: 7px;
 }
