--- a/assets/style/apps/note/NoteIndex.css
+++ b/assets/style/apps/note/NoteIndex.css
@@ -12,7 +12,7 @@
 @import "cmps/NotePreview.css";
 @import "cmps/NoteList.css";
 @import "cmps/NoteAdd.css";
-@import "cmps/NoteImg.css";
+@import "cmps/NoteComp.css";
 @import "cmps/todos.css";
 @import "cmps/NoteDetails.css";
 @import "cmps/screen.css";
