--- a/assets/style/apps/note/base/layout.css
+++ b/assets/style/apps/note/base/layout.css
@@ -1,13 +1,19 @@
-.notes-display {
+.note-main {
   display: grid;
+  grid-template-rows: 68px 1fr;
+  justify-content: center;
+  justify-items: center;
   width: 100%;
 }
+
 .notes-display .side-nav {
   grid-column: 1;
   grid-row: 1/-1;
   background-color: white;
 }
 .notes-display {
+  grid-row: 2;
+  width: 100%;
   display: grid;
   grid-template-rows: minmax(170px, 1fr) 1fr;
   grid-template-columns: 256px 1fr;
@@ -17,5 +23,5 @@
 }
 .unpinnedList-container {
   grid-column: 2;
-  margin-block-start: 30px;
+  margin-block-start: 90px;
 }
