--- a/assets/style/base/layout.css
+++ b/assets/style/base/layout.css
@@ -1,14 +1,11 @@
-.note-main {
-  /* height: 100%; */
-  display: grid;
-  grid-template-rows: 125px 1fr;
-  justify-content: center;
-  justify-items: center;
-  width: 100%;
-}
 .main-layout {
   min-height: 100vh;
   display: grid;
   grid-template-rows: 70px 1fr 35px;
   width: 100vw;
+}
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
