--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -19,6 +19,7 @@
 @import 'apps/mail/EmailList.css';
 @import 'apps/mail/cmps/EmailPreview.css';
 @import 'apps/mail/cmps/SideNav.css';
+@import 'apps/mail/cmps/EmailFilter.css';
 @import 'apps/mail/cmps/EmailCompose.css';
 @import 'apps/mail/cmps/EmailDetails.css';
 
