--- a/assets/style/apps/mail/cmps/EmailPreview.css
+++ b/assets/style/apps/mail/cmps/EmailPreview.css
@@ -72,7 +72,7 @@
 [data-title]{
     position: relative;
 }
-
+א
 [data-title]:hover::after {
     content: attr(data-title);
     position: absolute;
