--- a/assets/style/apps/mail/cmps/EmailDetails.css
+++ b/assets/style/apps/mail/cmps/EmailDetails.css
@@ -1,21 +1,34 @@
 .email-details{
     display: grid;
-    /* gap: 4em; */
+    gap: 1em;
     /* padding-block-start: 108px; */
     /* background-color: #ffff; */
     padding-inline: 53px;
     grid-template-rows: 80px 1fr;
     grid-template-columns: 50px 1fr;
-
+    grid-row: 2;
+    grid-column: 2;
+    fill: #001d35;
 }
 
 .email-details h1{
-    font-family: 'roboto-medium';
+    font-family: 'roboto-light';
     color: #202122;
+    font-weight: 600;
+    font-size: 22px;
     grid-column: 2;
-    align-self: center;
+    display: flex;
+    align-items: flex-end;
 }
+.email-details .icon{
+    grid-column: 1;
+    grid-row: 2;
+}
+.main-details-container{
+    grid-column: 2;
+    grid-row: 2;
 
+}
 .main-details-container header{
 display: flex;
 justify-content: space-between;
@@ -30,13 +43,12 @@ font-size: 14px;
 .main-details-container header div h4{
     font-size: 16px;
 }
-.main-details-container header div:last-of-type{
+.main-details-container header .details-options{
     display: flex;
     gap: 3em;
     fill: gold;
 }
 .details-body{
-    background-color: #0d253f;
-    color: #fff;
-    min-height: 400px;
+    color: black;
+    height: 400px;
 }
