--- a/assets/style/apps/note/cmps/NoteDetails.css
+++ b/assets/style/apps/note/cmps/NoteDetails.css
@@ -10,7 +10,8 @@
   width: 600px;
   display: grid;
   grid-template-rows: 1fr 33px;
-  box-shadow: 0 1px 3px 0 rgb(60 64 67 / 30%), 0 4px 8px 3px rgb(60 64 67 / 15%);
+  box-shadow: 0 1px 6px 100vh rgb(60 64 67 / 30%),
+    0 4px 8px 3px rgb(60 64 67 / 15%);
 }
 .note-info {
   position: relative;
