--- a/assets/style/cmps/AppHeader.css
+++ b/assets/style/cmps/AppHeader.css
@@ -46,7 +46,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  transform: translate(0,100%);
+  transform: translate(0, 100%);
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -55,19 +55,53 @@
 
   /* transition: 0.3s ease-in; */
 }
-.apps-icon{
+.apps-icon {
   height: 100%;
   cursor: pointer;
 }
-.keep-logo{
+.keep-logo {
   width: 46px;
 }
-.gmail-logo{
+.gmail-logo {
   width: 61px;
 }
-.home-logo{
+.home-logo {
   width: 44px;
 }
-@media(max-width: 720px) {
-  .app-header {}
+
+.note-filter {
+  grid-row: 1;
+  height: 100%;
+  align-self: center;
+  border-radius: 8px;
+  background-color: #f0f3f4;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: 30px 1fr;
+  align-items: center;
+  justify-content: flex-start;
+  height: 48px;
+  padding: 8px;
+  max-width: 720px;
+}
+.note-filter .filter-txt {
+  grid-column: 2;
+  background-color: transparent;
+}
+.note-filter > * {
+  border: none;
+}
+.note-filter .filter-txt-container .filter-txt {
+  border: none;
+}
+.note-filter .filter-txt:focus-visible {
+  width: inherit;
+  justify-self: flex-start;
+  outline: none;
+}
+@media (max-width: 720px) {
+  .app-header {
+  }
 }
