--- a/assets/style/apps/mail/EmailList.css
+++ b/assets/style/apps/mail/EmailList.css
@@ -3,12 +3,12 @@
     flex-direction: column;
     gap: 5px;
     padding-block: 10px;
-    /* background-color: #fff; */
+    background-color: #fff;
     margin-block: 8px;
     border-radius: 16px;
     margin-inline: 8px;
     padding-inline: 8px;
     grid-column: 2;
-    grid-row: 2;
+    grid-row: 1;
 }
 
