--- a/assets/style/setup/typography.css
+++ b/assets/style/setup/typography.css
@@ -3,20 +3,20 @@
 /* ROBOTO */
 @font-face {
   font-family: "roboto-light";
-  src: url(../../fonts/Roboto/Roboto-Light.ttf);
+  src: url(fonts/Roboto/Roboto-Light.ttf);
 }
 
 @font-face {
   font-family: "roboto-medium";
-  src: url(../../fonts/Roboto/Roboto-Medium.ttf);
+  src: url(fonts/Roboto/Roboto-Medium.ttf);
 }
 
 @font-face {
   font-family: "roboto-bold";
-  src: url(../../fonts/Roboto/Roboto-Bold.ttf);
+  src: url(fonts/Roboto/Roboto-Bold.ttf);
 }
 
 @font-face {
   font-family: "roboto-regular";
-  src: url(../../fonts/Roboto/Roboto-Regular.ttf);
+  src: url(fonts/Roboto/Roboto-Regular.ttf);
 }
