--- a/assets/style/apps/note/cmps/NoteDetails.css
+++ b/assets/style/apps/note/cmps/NoteDetails.css
@@ -23,7 +23,7 @@
 .note-title {
   width: 100%;
   grid-row: 1;
-  font-family: "roboto medium";
+  font-family: "roboto-medium";
   font-size: 1rem;
   font-weight: 500;
   overflow: hidden;
