--- a/assets/style/apps/note/base/base.css
+++ b/assets/style/apps/note/base/base.css
@@ -19,3 +19,20 @@ input {
 input:focus-visible {
   outline: none;
 }
+/* tool-tip */
+
+.note-main [data-title]:hover::after {
+  z-index: 100;
+  content: attr(data-title);
+  position: absolute;
+  font-size: 12px;
+  background: #333;
+  color: #fff;
+  padding: 0.2em 0.3em;
+  border-radius: 0.2em;
+  text-transform: capitalize;
+  bottom: -80%;
+  width: max-content;
+  right: 50%;
+  transform: translate(50%, 0%);
+}
