--- a/assets/style/apps/note/cmps/NoteAdd.css
+++ b/assets/style/apps/note/cmps/NoteAdd.css
@@ -1,16 +1,16 @@
 .note-add {
   grid-row: 1;
   grid-column: 2;
-  margin-inline-start: 32px;
+  margin-inline-start: 10%;
   margin-top: 32px;
-  width: 600px;
+  width: 80%;
+  max-width: 600px;
   justify-self: center;
   height: fit-content;
   display: grid;
   grid-template-rows: minmax(90px, fit-content) 36px;
   border-radius: 8px;
-  box-shadow: 1px 1px 0 rgb(0 0 0 / 10%), -1px -1px 11px 0px rgb(0 0 0 / 7%),
-    inset 1px 1px 0 rgb(0 0 0 / 10%), inset 0 -1px 0 rgb(0 0 0 / 7%);
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 35%);
 }
 
 .note-add .add-title,
@@ -53,4 +53,7 @@
 
 .note-add button {
   cursor: pointer;
+}
+.note-add button:hover {
+  background-color: rgba(95, 99, 104, 0.039);
 }
