--- a/assets/style/apps/note/cmps/NotePreview.css
+++ b/assets/style/apps/note/cmps/NotePreview.css
@@ -13,6 +13,12 @@
   margin-block-end: 16px;
   min-height: 30px;
 }
+.note-preview:hover {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+.note-preview:hover .pin {
+  opacity: 0.5;
+}
 
 .pin {
   z-index: 1;
@@ -22,6 +28,10 @@
   top: 0;
   right: 0;
   padding: 5px;
+  transition: opacity 0.4 ease-in-out;
+}
+.pin:hover {
+  opacity: 1;
 }
 .note-modal .pin {
   z-index: 4;
@@ -37,7 +47,7 @@
 }
 .text-box .note-title {
   grid-row: 1;
-  font-family: "roboto regular";
+  font-family: 'roboto regular';
   font-size: 1rem;
   padding: 12px 16px 0px 16px;
   font-weight: 500;
