--- a/assets/style/apps/note/cmps/SideNav.css
+++ b/assets/style/apps/note/cmps/SideNav.css
@@ -1,46 +1,69 @@
-.notes-display .side-nav-item {
-  display: grid;
-  grid-template-columns: 20px 20px 240px;
+.note-side-nav {
+  position: fixed;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  width: 80px;
+  transition: width 0.2s ease-in-out;
+  height: 100vh;
+  font-size: 15px;
+}
+.note-side-nav:hover {
+  z-index: 2023;
+  background-color: white;
+  width: 280px;
+  box-shadow: 0 16px 10px 0 rgba(0, 0, 0, 0.14),
+    0 11px 18px 0 rgba(0, 0, 0, 0.12), 0 13px 5px -1px rgba(0, 0, 0, 0.2);
+}
+.note-side-nav:hover .note-side-nav-item {
+  display: flex;
   align-items: center;
   height: 48px;
   gap: 18px;
-  padding-inline-start: 26px;
   padding-inline-end: 12px;
   padding-block: 6px;
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
   cursor: pointer;
-  background-color: white;
-  /* font-family: "roboto-medium"; */
+  font-family: 'roboto-medium';
+  transition: background-color 0.2s ease-in-out;
 }
-.notes-display .side-nav {
-  width: 100%;
-  font-size: 15px;
+.note-side-nav-item:hover {
+  background-color: var(--clr-note-hover-grey);
 }
-.unread-count {
-  -webkit-font-smoothing: auto;
-  font-size: 0.75rem;
-  color: #5f6368;
-  opacity: 0.8;
+.note-side-nav:hover .note-side-nav-item span {
+  display: block;
+  margin-inline-start: 20px;
 }
-
-.side-nav-item .icon {
-  grid-column: 2;
-  fill: #5f6368;
+.note-side-nav-item span {
+  display: none;
+  color: #202124;
+  font-family: 'roboto-medium';
+  font-size: 14px;
 }
-
-.notes-display .side-nav-item:hover {
-  background-color: #f1f3f4;
-}
-
-.side-nav-item.inbox div {
+.note-side-nav-item {
   display: flex;
-  gap: 98px;
   align-items: center;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  padding-inline-start: 12px;
+  cursor: pointer;
+  font-family: 'roboto-medium';
 }
-.notes-display .clicked-side-nav {
-  background-color: #fdefc3;
-  font-family: "roboto-medium";
-  color: #041e49;
-  fill: #041e49;
+
+.active .icon {
+  background-color: var(--clr-note-yellow);
+}
+.note-side-nav:hover .active.note-side-nav-item {
+  background-color: var(--clr-note-yellow);
+}
+
+.note-side-nav-item .icon {
+  height: 48px;
+  width: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: #202124;
+  border-radius: 50%;
 }
