--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,23 +1,25 @@
 /* Setup */
-@import "setup/vars.css";
-@import "setup/typography.css";
+@import 'setup/vars.css';
+@import 'setup/typography.css';
+@import 'setup/mq.css';
 
 /* Base */
-@import "base/base.css";
-@import "base/helpers.css";
-@import "base/layout.css";
-@import "base/forms.css";
+@import 'base/base.css';
+@import 'base/helpers.css';
+@import 'base/layout.css';
+@import 'base/forms.css';
 
 /* General Components */
-@import "cmps/HomePage.css";
-@import "cmps/AppHeader.css";
-@import "cmps/UserMsg.css";
-@import "cmps/AppFooter.css";
-@import "cmps/Login.css";
-@import "cmps/SignUp.css";
+@import 'cmps/HomePage.css';
+@import 'cmps/AppHeader.css';
+@import 'cmps/UserMsg.css';
+@import 'cmps/AppFooter.css';
+@import 'cmps/Login.css';
+@import 'cmps/SignUp.css';
+@import 'cmps/AboutUs.css';
 
 /* Apps */
-    /* EMAIL */
+/* EMAIL */
 @import 'apps/mail/EmailIndex.css';
 @import 'apps/mail/EmailList.css';
 @import 'apps/mail/cmps/EmailPreview.css';
@@ -29,5 +31,5 @@
 @import 'apps/mail/cmps/Logo.css';
 @import 'apps/mail/cmps/customInput.css';
 
-    /* KEEP */
+/* KEEP */
 @import 'apps/note/NoteIndex.css';
